Fix search overflowing on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,21 @@
   width: 90%;
   margin-left: 5%;
 }
+
+@media (max-width: 500px) {
+  .app {
+    font-size: 0.9em;
+  }
+}
+
+@media (max-width: 375px) {
+  .app {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 320px) {
+  .app {
+    font-size: 0.6em;
+  }
+}
